--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       }
     }
   </script>
-  <!-- <video id="herovideo" src="static/assets/Loading.mp4" height="100%" width="100%" muted autoplay onended=showbackground()></video> -->
+  <video id="herovideo" src="static/assets/Loading.mp4" height="100%" width="100%" muted autoplay onended=showbackground()></video>
 
 
   <div class="root" id="root"></div>
 
-<div class="papa" /*style="display: none;"*/ >
+<div class="papa" style="display: none;" >
 
 
   <div class="landing" >
